<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Save Kiwi</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="start_description">Start</string>
    <string name="exit_description">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="credits">game by: Kate_Mike_Gareth</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="menu1">Menu1</string>
    <string name="menu2">Menu2</string>

</resources>