<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <com.assignment.savekiwi.GameView
        android:id="@+id/gameView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonGroup"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="left"        
        android:background="#d3d3d3"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/left"
            android:src="@drawable/leftselector" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/right"
            android:src="@drawable/rightselector" />

        <ImageButton
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="right"
            android:contentDescription="@string/up"
            android:src="@drawable/upselector" />
    </LinearLayout>
    

</RelativeLayout>
