<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android" 
     android:layout_width = "match_parent"
     android:layout_height = "match_parent">
     
    <ImageView android:id = "@+id/mainMenuImage"
        android:contentDescription="@string/menu2"  
        android:src = "@drawable/menu2" 
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"> 
    </ImageView>
    
    <RelativeLayout
        android:id = "@+id/buttons"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"> 
        
         <ImageButton            
             android:id = "@+id/btnStart"  
             android:contentDescription="@string/start"          
             android:clickable = "true"            
             android:layout_alignParentLeft = "true"  
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="70dp"
             android:layout_marginLeft="50dp"          
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"           
             android:src = "@drawable/startselector" >        
             </ImageButton> 
             
         <ImageButton
             android:id = "@+id/btnExit"   
             android:contentDescription="@string/exit"         
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content" 
             android:layout_alignBaseline="@+id/btnStart"
		     android:layout_alignBottom="@+id/btnStart"
		     android:layout_marginRight="50dp" 
		     android:layout_alignParentRight="true"           
             android:src = "@drawable/exitselector"                                 
             android:clickable = "true" >       
             </ImageButton>
    </RelativeLayout>
</RelativeLayout>